--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,22 +1,13 @@
-fastapi==0.104.1
-uvicorn[standard]==0.24.0
-motor==3.3.2
-pymongo==4.6.1
-pydantic==2.5.0
-pydantic-settings==2.1.0
-email-validator==2.1.0
-python-jose[cryptography]==3.3.0
-passlib[bcrypt]==1.7.4
-bcrypt==4.1.1
-python-multipart==0.0.6
-httpx==0.25.2
-celery==5.3.4
-redis==5.0.1
-sentence-transformers==2.7.0
-huggingface_hub==0.19.4
-scikit-learn==1.3.2
-PyMuPDF==1.23.8
-python-docx==1.1.0
-beautifulsoup4==4.12.2
-ibm-watsonx-ai==0.2.0
-python-dotenv==1.0.0
+fastapi>=0.104.0
+uvicorn[standard]>=0.24.0
+motor>=3.3.0
+pymongo>=4.6.0
+pydantic>=2.5.0
+email-validator>=2.1.0
+python-jose[cryptography]>=3.3.0
+passlib[bcrypt]>=1.7.4
+python-dotenv>=1.0.0
+httpx>=0.25.0
+python-multipart>=0.0.6
+ibm-watsonx-ai>=1.0.0
+bcrypt>=4.0.0
